done up to skill section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammed Maruf Raju</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="header">
+      <nav>
+        <h2 class="nav-tittle">Ma<span class="text-primary">r</span>uf</h2>
+        <ul>
+          <li>portfolio</li>
+          <li>blogs</li>
+          <li><button class="btn-primary">Hire me</button></li>
+        </ul>
+      </nav>
+
+      <!-- banner -->
+      <section class="banner">
+        <section class="tittle">
+          <h4 class="top-bottom-margin">hi i am</h4>
+          <h2 class="top-bottom-margin">Muhammed Maruf</h2>
+          <p class="top-bottom-margin">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto
+            voluptate error excepturi nemo perferendis, molestiae quod
+            repellendus consectetur minima.
+          </p>
+          <section class="banner-button-section top-bottom-margin">
+            <button class="btn-primary">hay whats up</button>
+            <button class="btn-primary">Fucked up</button>
+          </section>
+        </section>
+        <section class="section-image">
+          <img src="images/hardy.png" alt="" />
+        </section>
+      </section>
+    </header>
+
+    <main>
+      <!-- about section -->
+      <section class="about">
+      <section class="about-container">
+        <div><h1>About</h1></div>
+        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ipsam error eligendi reprehenderit, maiores explicabo officia illo eveniet, quidem numquam at exercitationem dicta! Fugiat quo, est iusto esse fugit enim.lorem20  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quia libero doloremque beatae fugiat sapiente iusto corporis minus modi dolorem. </p></div>
+        <div class="address-contaienr">
+          <div class="address-item">
+            <h5>Name</h5>
+            <h3>Muhammed Maruf</h3>
+          </div>
+          <div class="address-item">
+            <h5>email</h5>
+            <h3>MuhammedMarufraju@gmail.com</h3>
+          </div>
+          <div class="address-item">
+            <h5>Date of birth</h5>
+            <h3>21 august 2000</h3>
+          </div>
+          <div class="address-item">
+            <h5>from</h5>
+            <h3>Chittagong,Bangladesh</h3>
+          </div>
+        </div>
+      </section>
+    </section>
+
+<!-- Skill section  -->
+<section class="skill-main-container">
+  <h1>My Skills </h1>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum omnis, repellat aliquid impedit explicabo alias iure veritatis? Debitis odio possimus reprehenderit ut similique quibusdam incidunt quae iste in, suscipit sint beatae porro iusto voluptatem obcaecati qui ipsa ullam rerum ab architecto illo. Ullam iure ratione animi tenetur neque alias fugiat.</p>
+  
+  <div class="all-card-container">
+    <div class="card">
+      <img src="images/icons/js.png" alt="">
+      <h3>vanilla javascriopt</h3>
+      <p>Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, vero hic obcaecati asperiores, rerum veritatis aspernatur dignissimos iste ipsam sint saepe soluta? Eius non necessitatibus possimus veritatis ad consequatur ea. amet consectetur adipisicing elit. Atque sed neque illo suscipit </p>
+    </div>
+    <div class="card">
+      <img src="images/icons/mongo.png" alt="">
+      <h3>Mongodb</h3>
+      <p>Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, vero hic obcaecati asperiores, rerum veritatis aspernatur dignissimos iste ipsam sint saepe soluta? Eius non necessitatibus possimus veritatis ad consequatur ea. amet consectetur adipisicing elit. Atque sed neque illo suscipit </p>
+    </div>
+    <div class="card">
+      <img src="images/icons/nodejs.png" alt="">
+      <h3>NodeJS</h3>
+      <p>Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, vero hic obcaecati asperiores, rerum veritatis aspernatur dignissimos iste ipsam sint saepe soluta? Eius non necessitatibus possimus veritatis ad consequatur ea. amet consectetur adipisicing elit. Atque sed neque illo suscipit </p>
+    </div>
+    <div class="card">
+      <img src="images/icons/react.png" alt="">
+      <h3>React</h3>
+      <p>Lorem, ipsum dolor sit Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, vero hic obcaecati asperiores, rerum veritatis aspernatur dignissimos iste ipsam sint saepe soluta? Eius non necessitatibus possimus veritatis ad consequatur ea. amet consectetur adipisicing elit. Atque sed neque illo suscipit </p>
+    </div>
+  </div>
+</section>
+   
+   
+    <!--  -->
+
+
+
+
+
+
+
+
+
+
+    </main>
+    <footer></footer>
+  </body>
 </html>
